src/generated_bindings/ssd_os.rs

#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of _opaque_pthread_once_t"][::core::mem::size_of::<_opaque_pthread_once_t>() - 16usize];
    ["Alignment of _opaque_pthread_once_t"]
        [::core::mem::align_of::<_opaque_pthread_once_t>() - 8usize];
    ["Offset of field: _opaque_pthread_once_t::__sig"]
        [::core::mem::offset_of!(_opaque_pthread_once_t, __sig) - 0usize];
    ["Offset of field: _opaque_pthread_once_t::__opaque"]
        [::core::mem::offset_of!(_opaque_pthread_once_t, __opaque) - 8usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _opaque_pthread_rwlock_t {
    pub __sig: ::core::ffi::c_long,
    pub __opaque: [::core::ffi::c_char; 192usize],
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of _opaque_pthread_rwlock_t"]
        [::core::mem::size_of::<_opaque_pthread_rwlock_t>() - 200usize];
    ["Alignment of _opaque_pthread_rwlock_t"]
        [::core::mem::align_of::<_opaque_pthread_rwlock_t>() - 8usize];
    ["Offset of field: _opaque_pthread_rwlock_t::__sig"]
        [::core::mem::offset_of!(_opaque_pthread_rwlock_t, __sig) - 0usize];
    ["Offset of field: _opaque_pthread_rwlock_t::__opaque"]
        [::core::mem::offset_of!(_opaque_pthread_rwlock_t, __opaque) - 8usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _opaque_pthread_rwlockattr_t {
    pub __sig: ::core::ffi::c_long,
    pub __opaque: [::core::ffi::c_char; 16usize],
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of _opaque_pthread_rwlockattr_t"]
        [::core::mem::size_of::<_opaque_pthread_rwlockattr_t>() - 24usize];
    ["Alignment of _opaque_pthread_rwlockattr_t"]
        [::core::mem::align_of::<_opaque_pthread_rwlockattr_t>() - 8usize];
    ["Offset of field: _opaque_pthread_rwlockattr_t::__sig"]
        [::core::mem::offset_of!(_opaque_pthread_rwlockattr_t, __sig) - 0usize];
    ["Offset of field: _opaque_pthread_rwlockattr_t::__opaque"]
        [::core::mem::offset_of!(_opaque_pthread_rwlockattr_t, __opaque) - 8usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _opaque_pthread_t {
    pub __sig: ::core::ffi::c_long,
    pub __cleanup_stack: *mut __darwin_pthread_handler_rec,
    pub __opaque: [::core::ffi::c_char; 8176usize],
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of _opaque_pthread_t"][::core::mem::size_of::<_opaque_pthread_t>() - 8192usize];
    ["Alignment of _opaque_pthread_t"][::core::mem::align_of::<_opaque_pthread_t>() - 8usize];
    ["Offset of field: _opaque_pthread_t::__sig"]
        [::core::mem::offset_of!(_opaque_pthread_t, __sig) - 0usize];
    ["Offset of field: _opaque_pthread_t::__cleanup_stack"]
        [::core::mem::offset_of!(_opaque_pthread_t, __cleanup_stack) - 8usize];
    ["Offset of field: _opaque_pthread_t::__opaque"]
        [::core::mem::offset_of!(_opaque_pthread_t, __opaque) - 16usize];
};
pub type __darwin_pthread_attr_t = _opaque_pthread_attr_t;
pub type __darwin_pthread_cond_t = _opaque_pthread_cond_t;
pub type __darwin_pthread_condattr_t = _opaque_pthread_condattr_t;
pub type __darwin_pthread_key_t = ::core::ffi::c_ulong;
pub type __darwin_pthread_mutex_t = _opaque_pthread_mutex_t;
pub type __darwin_pthread_mutexattr_t = _opaque_pthread_mutexattr_t;
pub type __darwin_pthread_once_t = _opaque_pthread_once_t;
pub type __darwin_pthread_rwlock_t = _opaque_pthread_rwlock_t;
pub type __darwin_pthread_rwlockattr_t = _opaque_pthread_rwlockattr_t;
pub type __darwin_pthread_t = *mut _opaque_pthread_t;
pub type u_int8_t = ::core::ffi::c_uchar;
pub type u_int16_t = ::core::ffi::c_ushort;
pub type u_int32_t = ::core::ffi::c_uint;
pub type u_int64_t = ::core::ffi::c_ulonglong;
pub type register_t = i64;
pub type user_addr_t = u_int64_t;
pub type user_size_t = u_int64_t;
pub type user_ssize_t = i64;
pub type user_long_t = i64;
pub type user_ulong_t = u_int64_t;
pub type user_time_t = i64;
pub type user_off_t = i64;
pub type syscall_arg_t = u_int64_t;
pub type intmax_t = ::core::ffi::c_long;
pub type uintmax_t = ::core::ffi::c_ulong;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct lring_entry {
    pub function: *mut ::core::ffi::c_void,
    pub ctx: *mut ::core::ffi::c_void,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of lring_entry"][::core::mem::size_of::<lring_entry>() - 16usize];
    ["Alignment of lring_entry"][::core::mem::align_of::<lring_entry>() - 8usize];
    ["Offset of field: lring_entry::function"]
        [::core::mem::offset_of!(lring_entry, function) - 0usize];
    ["Offset of field: lring_entry::ctx"][::core::mem::offset_of!(lring_entry, ctx) - 8usize];
};
pub type ssd_os_extension_fn = ::core::option::Option<
    unsafe extern "C" fn(context: *mut ::core::ffi::c_void) -> ::core::ffi::c_int,
>;
pub type ssd_os_stage_fn = ::core::option::Option<
    unsafe extern "C" fn(context: *mut ::core::ffi::c_void) -> *mut ::core::ffi::c_void,
>;
pub type ssd_os_ctrl_fn = ::core::option::Option<unsafe extern "C" fn() -> ::core::ffi::c_int>;
pub type ssd_os_conn_ring_fn =
    ::core::option::Option<unsafe extern "C" fn(entry: *mut lring_entry) -> ::core::ffi::c_int>;
pub type ssd_os_conn_fn =
    ::core::option::Option<unsafe extern "C" fn(entry: *mut lring_entry) -> *mut pipeline>;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct extension {
    pub magic: [::core::ffi::c_char; 4usize],
    pub name: [::core::ffi::c_char; 32usize],
    pub extension_fn: ssd_os_extension_fn,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of extension"][::core::mem::size_of::<extension>() - 48usize];
    ["Alignment of extension"][::core::mem::align_of::<extension>() - 8usize];
    ["Offset of field: extension::magic"][::core::mem::offset_of!(extension, magic) - 0usize];
    ["Offset of field: extension::name"][::core::mem::offset_of!(extension, name) - 4usize];
    ["Offset of field: extension::extension_fn"]
        [::core::mem::offset_of!(extension, extension_fn) - 40usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct stage {
    pub magic: [::core::ffi::c_char; 4usize],
    pub name: [::core::ffi::c_char; 32usize],
    pub init_fn: ssd_os_ctrl_fn,
    pub exit_fn: ssd_os_ctrl_fn,
    pub stage_fn: ssd_os_stage_fn,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of stage"][::core::mem::size_of::<stage>() - 64usize];
    ["Alignment of stage"][::core::mem::align_of::<stage>() - 8usize];
    ["Offset of field: stage::magic"][::core::mem::offset_of!(stage, magic) - 0usize];
    ["Offset of field: stage::name"][::core::mem::offset_of!(stage, name) - 4usize];
    ["Offset of field: stage::init_fn"][::core::mem::offset_of!(stage, init_fn) - 40usize];
    ["Offset of field: stage::exit_fn"][::core::mem::offset_of!(stage, exit_fn) - 48usize];
    ["Offset of field: stage::stage_fn"][::core::mem::offset_of!(stage, stage_fn) - 56usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct pipeline {
    pub name: [::core::ffi::c_char; 32usize],
    pub internal: [*mut ::core::ffi::c_void; 2usize],
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of pipeline"][::core::mem::size_of::<pipeline>() - 48usize];
    ["Alignment of pipeline"][::core::mem::align_of::<pipeline>() - 8usize];
    ["Offset of field: pipeline::name"][::core::mem::offset_of!(pipeline, name) - 0usize];
    ["Offset of field: pipeline::internal"][::core::mem::offset_of!(pipeline, internal) - 32usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct connector {
    pub magic: [::core::ffi::c_char; 4usize],
    pub name: [::core::ffi::c_char; 32usize],
    pub init_fn: ssd_os_ctrl_fn,
    pub exit_fn: ssd_os_ctrl_fn,
    pub conn_fn: ssd_os_conn_fn,
    pub ring_fn: ssd_os_conn_ring_fn,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of connector"][::core::mem::size_of::<connector>() - 72usize];
    ["Alignment of connector"][::core::mem::align_of::<connector>() - 8usize];
    ["Offset of field: connector::magic"][::core::mem::offset_of!(connector, magic) - 0usize];
    ["Offset of field: connector::name"][::core::mem::offset_of!(connector, name) - 4usize];
    ["Offset of field: connector::init_fn"][::core::mem::offset_of!(connector, init_fn) - 40usize];
    ["Offset of field: connector::exit_fn"][::core::mem::offset_of!(connector, exit_fn) - 48usize];
    ["Offset of field: connector::conn_fn"][::core::mem::offset_of!(connector, conn_fn) - 56usize];
    ["Offset of field: connector::ring_fn"][::core::mem::offset_of!(connector, ring_fn) - 64usize];
};
unsafe extern "C" {
    pub fn program_load(elf: *mut u8, size: u32) -> ::core::ffi::c_int;
}
unsafe extern "C" {
    pub fn program_pipe(file: *mut u8) -> ::core::ffi::c_int;
}
unsafe extern "C" {
    pub fn program_connect(file: *mut u8) -> ::core::ffi::c_int;
}
unsafe extern "C" {
    pub fn loader_extensions_print();
}
unsafe extern "C" {
    pub fn loader_stages_print();
}
unsafe extern "C" {
    pub fn loader_connectors_print();
}
unsafe extern "C" {
    pub fn ssd_os_print_s(s: *const ::core::ffi::c_char);
}
unsafe extern "C" {
    pub fn ssd_os_print_c(c: ::core::ffi::c_char);
}
unsafe extern "C" {
    pub fn ssd_os_print_i(x: ::core::ffi::c_ulong);
}
unsafe extern "C" {
    pub fn ssd_os_print_h(x: ::core::ffi::c_ulong);
}
unsafe extern "C" {
    pub fn ssd_os_print_ss(s1: *const ::core::ffi::c_char, s2: *const ::core::ffi::c_char);
}
unsafe extern "C" {
    pub fn ssd_os_print_ss_l(s1: *const ::core::ffi::c_char, s2: *const ::core::ffi::c_char);
}
unsafe extern "C" {
    pub fn ssd_os_print_sis(
        s1: *const ::core::ffi::c_char,
        i: ::core::ffi::c_ulong,
        s2: *const ::core::ffi::c_char,
    );
}
unsafe extern "C" {
    pub fn ssd_os_print_sis_l(
        s1: *const ::core::ffi::c_char,
        i: ::core::ffi::c_ulong,
        s2: *const ::core::ffi::c_char,
    );
}
unsafe extern "C" {
    pub fn ssd_os_print_shs(
        s1: *const ::core::ffi::c_char,
        h: ::core::ffi::c_ulong,
        s2: *const ::core::ffi::c_char,
    );
}
unsafe extern "C" {
    pub fn ssd_os_print_shs_l(
        s1: *const ::core::ffi::c_char,
        h: ::core::ffi::c_ulong,
        s2: *const ::core::ffi::c_char,
    );
}
unsafe extern "C" {
    pub fn ssd_os_print_lock();
}
unsafe extern "C" {
    pub fn ssd_os_print_unlock();
}
unsafe extern "C" {
    pub fn ssd_os_ncores() -> ::core::ffi::c_int;
}
unsafe extern "C" {
    pub fn ssd_os_this_cpu(name: *mut ::core::ffi::c_char) -> ::core::ffi::c_int;
}
unsafe extern "C" {
    pub fn ssd_os_mem_get(key: ::core::ffi::c_int) -> *mut ::core::ffi::c_void;
}
unsafe extern "C" {
    pub fn ssd_os_mem_size(key: ::core::ffi::c_int) -> ::core::ffi::c_int;
}
unsafe extern "C" {
    pub fn ssd_os_mem_nregions() -> ::core::ffi::c_int;
}
unsafe extern "C" {
    pub fn ssd_os_mem_cpy(
        dest: *mut ::core::ffi::c_void,
        src: *const ::core::ffi::c_void,
        n: u32,
    ) -> *mut ::core::ffi::c_void;
}
unsafe extern "C" {
    pub fn ssd_os_sleep(sec: ::core::ffi::c_int);
}
unsafe extern "C" {
    pub fn ssd_os_msleep(msec: ::core::ffi::c_int);
}
unsafe extern "C" {
    pub fn ssd_os_usleep(usec: ::core::ffi::c_int);
}
unsafe extern "C" {
    pub fn ssd_os_timer_interrupt_on(
        interval: ::core::ffi::c_int,
        function: *mut ::core::ffi::c_void,
    );
}
unsafe extern "C" {
    pub fn ssd_os_timer_interrupt_off();
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct lring {
    _unused: [u8; 0],
}
unsafe extern "C" {
    pub fn ssd_os_lring_create(
        name: *mut ::core::ffi::c_char,
        size: ::core::ffi::c_int,
        mem: *mut ::core::ffi::c_void,
        flags: ::core::ffi::c_int,
    ) -> *mut lring;
}
unsafe extern "C" {
    pub fn ssd_os_lring_enqueue(ring: *mut lring, entry: *mut lring_entry) -> ::core::ffi::c_int;
}
